@@ -121,8 +121,7 @@ public final class StandardExpressionProcessor {
     
     
     public static Object executeExpression(final Arguments arguments, final Expression expression) {
-        return getExecutorAttribute(arguments.getConfiguration()).executeExpression(
-                arguments, expression, StandardExpressionExecutionContext.NORMAL);
+        return getExecutorAttribute(arguments.getConfiguration()).executeExpression(arguments, expression);
     }
     
     /**
@@ -131,7 +130,28 @@ public final class StandardExpressionProcessor {
     public static Object executeExpression(final Configuration configuration, 
             final IProcessingContext processingContext, final Expression expression) {
         return getExecutorAttribute(configuration).executeExpression(
-                configuration, processingContext, expression, StandardExpressionExecutionContext.NORMAL);
+                configuration, processingContext, expression);
+    }
+    
+
+    
+    /**
+     * @since 2.0.16
+     */
+    public static Object executeExpression(final Arguments arguments, final Expression expression,
+            final StandardExpressionExecutionContext expContext) {
+        return getExecutorAttribute(arguments.getConfiguration()).executeExpression(
+                arguments, expression, expContext);
+    }
+    
+    /**
+     * @since 2.0.16
+     */
+    public static Object executeExpression(final Configuration configuration, 
+            final IProcessingContext processingContext, final Expression expression,
+            final StandardExpressionExecutionContext expContext) {
+        return getExecutorAttribute(configuration).executeExpression(
+                configuration, processingContext, expression, expContext);
     }
     
     
@@ -152,6 +172,31 @@ public final class StandardExpressionProcessor {
         return executeExpression(configuration, processingContext, parseExpression(configuration, processingContext, input));
     }
     
+
+    
+    /**
+     * @since 2.0.16
+     */
+    public static Object processExpression(final Arguments arguments, final String input,
+            final StandardExpressionExecutionContext expContext) {
+        return executeExpression(
+                arguments, 
+                parseExpression(arguments, input), 
+                expContext);
+    }
+    
+    /**
+     * @since 2.0.16
+     */
+    public static Object processExpression(final Configuration configuration, 
+            final IProcessingContext processingContext, final String input,
+            final StandardExpressionExecutionContext expContext) {
+        return executeExpression(
+                configuration, 
+                processingContext, 
+                parseExpression(configuration, processingContext, input),
+                expContext);
+    }
 
     
     
