@@ -5,7 +5,8 @@
 - Added StringUtils.randomAlphanumeric(...) utility method.
 - Added to ElementNameProcessorMatcher the possibility not to apply dialect prefix to element name 
   when matching.
-- Forbidden the inclusion of request parameter variables ('param.*') in preprocessing expressions.
+- Forbidden the inclusion of request parameter variables ('param.*') in preprocessing expressions
+  and th:utext attribute values.
 
 
 2.0.15
